<resources>
    <string name="app_name">AmiiboAPI</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="error_msg">Something happen, try again later.</string>
    <string name="title_amiibo">AMIIBO APP</string>
    <string name="amiibo_series">Series</string>
    <string name="character">Character</string>
    <string name="game_series">Game Series</string>
    <string name="character_name">Name</string>
    <string name="character_type">Type</string>
    <string name="character_release">Release</string>
    <string name="delete_amiibo">Delete Amiibo</string>
    <string name="purchase_amiibo">Purchase Amiibo</string>
</resources>