<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.DetailsActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp">

        <ImageView
        android:id="@+id/amiibo_image_view"
        android:layout_width="@dimen/icon_size2"
        android:layout_height="@dimen/icon_size2"
        android:layout_gravity="center" />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/top_margin"
            android:fillViewport="true" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/amiiboSeriesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/amiibo_series"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/text_title_size" />

                    <TextView
                        android:id="@+id/amiibo_series"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_subtitle_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/characterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/amiiboSeriesLayout"
                    android:layout_marginTop="@dimen/top_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/character"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/text_title_size" />

                    <TextView
                        android:id="@+id/amiibo_character"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_subtitle_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gameSeriesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/characterLayout"
                    android:layout_marginTop="@dimen/top_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/game_series"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/text_title_size" />

                    <TextView
                        android:id="@+id/amiibo_game_series"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_subtitle_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/characterNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gameSeriesLayout"
                    android:layout_marginTop="@dimen/top_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/character_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/text_title_size" />

                    <TextView
                        android:id="@+id/amiibo_character_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_subtitle_size" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/typeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/characterNameLayout"
                    android:layout_marginTop="@dimen/top_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/character_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/text_title_size" />

                    <TextView
                        android:id="@+id/amiibo_character_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_subtitle_size" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/releaseLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/typeLayout"
                    android:layout_marginTop="@dimen/top_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/character_release"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/text_title_size" />

                    <TextView
                        android:id="@+id/amiibo_character_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_subtitle_size" />
                </LinearLayout>
            </RelativeLayout>

        </ScrollView>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/amiibo_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin"
            android:layout_marginRight="@dimen/btn_margin"
            android:text="@string/delete_amiibo"
            android:textSize="16sp" />

        <Button
            android:id="@+id/purchase_amiibo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin"
            android:layout_marginRight="@dimen/btn_margin"
            android:text="@string/purchase_amiibo"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>